--- a/pom.xml
+++ b/pom.xml
@@ -64,5 +64,25 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>proxool</groupId>
+            <artifactId>proxool</artifactId>
+            <version>0.8.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.logicalcobwebs</groupId>
+            <artifactId>com.springsource.org.logicalcobwebs.proxool</artifactId>
+            <version>0.9.1</version>
+        </dependency>
     </dependencies>
 </project>
