--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,26 @@
     <groupId>manning</groupId>
     <artifactId>lambdasinaction</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <finalName>lambdas-in-action</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
 
     <dependencies>
         <dependency>
@@ -79,10 +99,10 @@
             <artifactId>proxool</artifactId>
             <version>0.8.3</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.logicalcobwebs</groupId>
             <artifactId>com.springsource.org.logicalcobwebs.proxool</artifactId>
             <version>0.9.1</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 </project>
