--- a/pom.xml
+++ b/pom.xml
@@ -104,5 +104,10 @@
             <artifactId>com.springsource.org.logicalcobwebs.proxool</artifactId>
             <version>0.9.1</version>
         </dependency>-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-oxm</artifactId>
+            <version>5.1.2.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
