--- a/pom.xml
+++ b/pom.xml
@@ -141,5 +141,18 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.9.7</version>
         </dependency>
+
+        <!--Reactor Core-->
+        <!--https://github.com/reactor/reactor-core-->
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.2.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <version>3.2.2.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
