--- a/pom.xml
+++ b/pom.xml
@@ -154,5 +154,10 @@
             <artifactId>reactor-test</artifactId>
             <version>3.2.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
     </dependencies>
 </project>
